style.css
/* ######## RESET & TYPOGRAPHY ########*/

* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  font-family: "Roboto Condensed", Helvetica, Segoe, Arial, sans-serif;
  color: #333;
}

html,
body {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 1.5;
  color: #454441;
  background-color: #eee;
}
@media (min-width: 700px) {
  body {
    font-size: 18px;
  }
}
@media (min-width: 1200px) {
  body {
    font-size: 20px;
  }
}
@media (min-width: 1400px) {
  body {
    font-size: 24px;
  }
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
  font-weight: 600;
  line-height: 1.25;
  text-rendering: optimizeLegibility;
}
h1 {
  font-size: 40px;
}
h2 {
  font-size: 32px;
}
h3 {
  font-size: 24px;
}
h4, h5, h6 {
  font-size: 16px;
}

p {
  margin: 0;
}
li {
  color: #888580;
}
a {
  font-weight: 600;
  color: #555;
  text-decoration: none;
}
a:hover,
a:focus {
  text-decoration: underline;
}

::-webkit-input-placeholder { /* WebKit browsers */
    font-style: italic;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
    font-style: italic;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
    font-style: italic;
}
:-ms-input-placeholder { /* Internet Explorer 10+ */
    font-style: italic;
}

/* GENERIC */

.container {
  position: relative;
  padding: 0 1em 1em;
  //padding: 0 1em 1em;
  margin: 0 auto;
  //overflow: hidden;
}
.container {
  width: 97%;
}
@media (min-width: 450px) {
  .container {
    width: 90%;
  }
}
@media (min-width: 900px) {
  .container {
    width: 75%;
  }
}
@media (min-width: 1100px) {
  .container {
    width: 50%;
  }
}
@media (min-width: 1400px) {
  .container {
    width: 35%;
  }
}
.active-section {
  margin-bottom: 2.5em;
}
.main-section {
  position: absolute;
  padding: 0 1em;
  width: 100%;
}
.search-visible {
  right: 0;
  opacity: 100%;
  transition: right 0.1s ease-out 0.1s;
  -webkit-transition: right 0.1s ease-out 0.1s;
}
.search-hidden {
  right: 200%;
  transition: right 0.1s ease-in;
  -webkit-transition: right 0.1s ease-in;
}
.details-hidden {
  left: 200%;
  transition: left 0.1s ease-in;
  -webkit-transition: left 0.1s ease-in;
}
.details-visible {
  left: 1em;
  transition: left 0.1s ease-out 0.1s;
  -webkit-transition: left 0.1s ease-out 0.1s;
}
.text-element {
  display: inline-block;
  margin: 0.1em 0;
}
.list-element {
  display: block;
}
.line-big {
  display: inline;
  font-size: 1.3em;
  font-weight: bold;
}
.line-small {
  display: inline;
  font-size: 1.1em;
}
.bigger {
  font-size: 1.5em;
}
.blue {
  color: #1e85fe;
}
.thin {
  font-weight: 400;
}

/* HEADER */

.topbar { 
  background-color: none;
  height: 4em;
  width: 100%;
}
.icon {
  /* vertical centering */
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  
  height: 2.35em;
  cursor: pointer;
}
.right {
  float: right;
}
.left {
  left: left;
}
@media (min-width: 450px) {
  .topbar {
    height: 5em;
  }
}
@media (min-width: 1000px) {
  .topbar {
    height: 6em;
  }
}

/* SEARCH */

.chosen-line {
  margin: 0.1em 0 0;
}
.chosen-data {
  cursor: pointer;
  width: 100%;
}
.label {
  display: inline-block;
  font-size: 1.4em;
  font-weight: bold;
  text-transform: uppercase;
  width: 3.2em;
}
.input {
  width: 100%;
  margin: 0.3em 0 0em;
  padding: 0.2em 0.3em;
  font-size: 2.2em;
  border-radius: 0;
  border: none;
  background-color: #fff;
}
.input::-moz-selection {
    background-color: #1e85fe;
    color: white;
}
.input::selection {
    background-color: #1e85fe;
    color: white;
}
.suggest-element {
  margin: 0 0 0 0.8em;
  cursor: pointer;
}
.no-matches {
  font-size: 1.3em;
  font-style: italic;
  color: #666;
}
.cancel-input {
  height: 2em;
  float: right;
}

/* SEARCH RESULTS */

.search-results {
  margin-top: 2em;
}
.search-results .line-big {
  display: inline-block;
  width: 5.7em;
  margin-bottom: 0.3em;
}
.text-element.list-element {
  cursor: pointer;
}

/* Loading icon */
@keyframes spin {
	from { transform: rotate(0deg); }
	to { transform: rotate(360deg); }
}
.spinner {
	width: 6em;
	margin: 3em auto;
	animation: spin 1s infinite linear;
}

/* ROUTE DETAILS */

.left-column {
  display: inline-block;
  width: 3em;
}
.connection-symbol {
  height: 1em;
  margin: 0.2em 0 0 0.8em;
}
.intermediate-block {
  margin: 1.3em 0;
}

/* SETTINGS */

.settings-title {
  font-size: 3.2em;
  font-weight: 200;
  text-transform: uppercase;  
}
.settings-element {
  margin: 1em 0;
}
.about-section {
  margin-top: 1em;
}
.about-section p {
  margin-bottom: 1em;
}

